Revert "Use :host in combination with ::ng-deep to stop bleed into other components."
This reverts commit bbdc5b92d2f2563f2b3699f18379723d9c1030b0.

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-folderbrowser/form-folderbrowser.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-folderbrowser/form-folderbrowser.component.scss
@@ -13,7 +13,7 @@
   padding-left: 12px;
 }
 
-:host ::ng-deep .mat-toolbar.omv-selection-header {
+::ng-deep .mat-toolbar.omv-selection-header {
   .mat-form-field {
     font-size: var(--mat-font-size-body-1);
 
