--- a/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-hint/form-hint.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-hint/form-hint.component.scss
@@ -1,4 +1,4 @@
-:host ::ng-deep {
+::ng-deep omv-form-hint {
   omv-alert-panel .mat-card {
     margin: 0 0 1rem !important;
   }
