--- a/deb/openmediavault/workbench/src/app/core/components/intuition/material/mat-form-button/mat-form-button.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/material/mat-form-button/mat-form-button.component.scss
@@ -4,6 +4,6 @@
   color: dc.$omv-color-white;
 }
 
-:host ::ng-deep button * {
+::ng-deep button * {
   pointer-events: none;
 }
