--- a/deb/openmediavault/workbench/src/app/shared/components/datatable/datatable.component.scss
+++ b/deb/openmediavault/workbench/src/app/shared/components/datatable/datatable.component.scss
@@ -2,7 +2,7 @@
 @use 'src/scss/theme';
 
 // Toolbar
-:host ::ng-deep .mat-toolbar {
+::ng-deep omv-datatable .mat-toolbar {
   .mat-button,
   .mat-icon-button {
     color: var(--mat-primary-color-text);
@@ -44,7 +44,7 @@
 }
 
 // Datatable
-:host ::ng-deep .ngx-datatable {
+::ng-deep omv-datatable .ngx-datatable {
   /* stylelint-disable no-descending-specificity */
   box-shadow: none;
 
